--- a/assets/index.html
+++ b/assets/index.html
@@ -27,7 +27,7 @@
       <div ng-view></div>
     </div>
   
-    <a class="btn signInBtn" href="" role="button" id="popSignin" data-hide="popover"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> &nbsp;Sign In</a>
+    <a class="btn signInBtn" href="" role="button" id="popSignin"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> &nbsp;Sign In</a>
   <!-- Sign In Form -->
   <div class="col-md-2 subDetail" id="signIn" ng-init="user={}">
     <form role="form" id="hmeContact" name ="myForm">
